# PyDialer

./: .gitignore  Readme.md  qofono.py  setup.cfg
src/Dialer/: MainWindow.py  MainWindow.qml  __main__.py
