[metadata]
name = PyDialer
version = 0.0.1
author = Yury Shvedov
author_email = mestofel13@gmail.com
description = Simple Python oFono Dialer
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/ein-shved/PyDialer
project_urls =
    Bug Tracker = https://github.com/ein-shved/PyDialer/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Operating System :: POSIX :: Linux

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src
